Issue #2293589 by G-raph, ngocketit: Fixed Texts are not vertically aligned in listing views.

--- a/core/themes/seven/css/components/dropbutton.component.css
+++ b/core/themes/seven/css/components/dropbutton.component.css
@@ -122,6 +122,8 @@
  */
 .dropbutton-single .dropbutton-widget {
   border: 0;
+  position: static;
+  display: inline-block;
 }
 .dropbutton-single .dropbutton-action a {
   padding: 4px 1.5em;
